fixed spacing?

--- a/css/style.css
+++ b/css/style.css
@@ -330,8 +330,8 @@ button {
 }
 
 .site-navbar ul {
-    margin: 0;
-    padding: 0;
+    margin: 5%;
+    padding: 5%;
     list-style: none;
     display: flex;
 }
